<resources>
    <string name="app_name">Ex8_EditText</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome</string>
    <string name="hint_nome">José da Silva</string>
    <string name="email">Email</string>
    <string name="hint_email">jose@teste.com</string>
    <string name="senha">Senha</string>
    <string name="msg_erro_email">Email inválido</string>
    <string name="msg_erro_senha">Senha inválida</string>
    <string name="msg_sucesso">Usuário %1$s com email %2$s cadastrado com sucesso!</string>
    <string name="cep">Cep</string>
</resources>
